--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/u4bi-store/node-cli-app/issues"
   },
-  "homepage": "https://github.com/u4bi-store/node-cli-app#readme"
+  "homepage": "https://github.com/u4bi-store/node-cli-app#readme",
+  "dependencies": {
+    "colors": "^1.3.0",
+    "commander": "^2.15.1",
+    "inquirer": "^6.0.0"
+  }
 }
