--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "colors": "^1.3.0",
     "commander": "^2.15.1",
     "inquirer": "^6.0.0",
-    "pad": "^2.1.0"
+    "pad": "^2.1.0",
+    "read-data": "^1.1.0",
+    "write-json": "^3.0.1"
   }
 }
